# OneAtlas

./: .editorconfig  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SETUP.md  boot.py  evaluation_log.json  pyproject.toml  render.yaml
.github/workflows/: ci.yml
eval_reports/: prompt1.json  prompt2.json  prompt9.json
frontend/: .env.local.example  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AssumptionsPanel.tsx  ConflictsPanel.tsx  HITLModal.tsx  IntegrationsPanel.tsx  LogViewer.tsx  MermaidDiagram.tsx  PipelineProgress.tsx  SchemaViewer.tsx  StageCard.tsx
frontend/src/hooks/: useSSE.ts
frontend/src/pages/: EvalPage.tsx  GeneratePage.tsx  HomePage.tsx  IntegrationsPage.tsx  ResultsPage.tsx
src/compiler/: crew.py  main.py
src/compiler/config/: agents.yaml  routing.yaml  tasks.yaml
src/compiler/eval/: __init__.py  assignment_prompts.json  prompts.json  recorder.py  runner.py
src/compiler/integrations/: registry.py
src/compiler/schemas/: contracts.py
src/compiler/tools/: __init__.py  json_repair_tool.py  llm_cache.py  mermaid_generator_tool.py  routing.py  schema_diff_tool.py
tests/: __init__.py  conftest.py  test_integrations.py  test_json_repair.py  test_schemas.py
