[project]
name = "oneatlas-appspec-engine"
version = "0.1.0"
description = "OneAtlas AppSpec Engine - natural language to validated AppSpec compiler using crewAI"
authors = [{ name = "Lokesh" }]
requires-python = ">=3.10"
dependencies = [
    "crewai[google-genai,tools]==1.14.5",
    "litellm>=1.83.7",
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.2",
    "httpx==0.28.1",
    "aiofiles==24.1.0",
    "python-dotenv>=1.2.2,<2",
    "pydantic>=2.11.5,<2.13",
    "pydantic-settings>=2.10.1,<3",
    "json-repair==0.25.2",
    "sse-starlette==2.3.5",
]

[project.scripts]
compiler = "compiler.main:run"
run_crew = "compiler.main:run"
train = "compiler.main:train"
replay = "compiler.main:replay"
test = "compiler.main:test"
run_with_trigger = "compiler.main:run_with_trigger"
serve = "compiler.main:serve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/compiler"]

[tool.crewai]
type = "crew"

[tool.isort]
profile = "black"

